[package]
name = "Diffie-Hellman"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/main.rs"

[dependencies]
rand = "0.8"
num-bigint = { version = "0.4", features = ["rand"] }
hacspec-lib = { path = "../../hacspec/lib" }
secret_integers = { path = "../../hacspec/utils/secret-integers" }
hacspec-sha256 = { path = "../../hacspec/examples/sha256" }