[package]
name = "Srp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[lib]
path = "src/main.rs"

[dependencies]
hacspec-lib = { path = "../../hacspec/lib" }
secret_integers = { path = "../../hacspec/utils/secret-integers" }
hacspec-sha256 = { path = "../../hacspec/examples/sha256" }